# DSLinter

./: .gitignore  .npmrc  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  build.rs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/workflows/: release-dslint-binaries.yml  release-napi-bindings.yml  tests.yml
.pnpm-store/v11/: index.db
dashboard/: .dslinter.json  README.md  index.html  package.json  tsconfig.json  vite.config.ts
dashboard/shared/: paths.ts  reportPath.ts  servePort.ts
dashboard/src/: index.ts
dashboard/vite/: collectScanModules.test.ts  collectScanModules.ts  consumer.config.mjs  consumerAlias.test.ts  consumerAlias.ts  embed-serve.config.ts  embedTailwindSources.test.ts  embedTailwindSources.ts  loadConsumerAliases.ts  openFileInEditor.mjs  openFileInEditor.test.mjs  plugin.resolve.test.ts  plugin.ts  reportPath.test.ts  resolveWayfinderImport.ts
demo/: .dslint.json  .dslinter.json  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js  tsconfig.json  tw-test.css  vite.config.ts  vite.config.ts.timestamp-1779087422802-a4995b58ad6da.mjs
demo-inertia/: .dslinter.json  README.md  composer.json  package-lock.json  package.json  pnpm-lock.yaml
demo-inertia/public/: dslint-report.json
demo-inertia/routes/: web.php
demo-inertia/scripts/: dev.mjs
demo/.cursor/: mcp.json
demo/inertia/: README.md
demo/public/: dslint-report.json
demo/react/: .dslinter.json  README.md  index.html  package.json  tsconfig.json  (+2 more)
scripts/: patch-napi-loader.mjs  release.mjs  upload-release-binary.mjs  wait-for-release-assets.mjs
src/: class_strings.rs  cli.rs  code_quality.rs  config.rs  css_tokens.rs  cva_extract.rs  directives.rs  ecma.rs  gitignore.rs  import_filter.rs  lib.rs  lines.rs  main.rs  model.rs  napi.rs  playground_emit.rs  report.rs  rules.rs  scan.rs  scan_pipeline.rs  smells.rs  text_patterns.rs  token_values.rs  ts_shape_map.rs  vue.rs  watch.rs
tasks/: todo.md
tests/: css_tokens_workspace.rs  demo_inertia_inline_style.rs  demo_workspace.rs  scan_perf.rs
website/: index.html  package.json  wrangler.jsonc
(+277 files in other folders)
