[package]
name = "dslinter"
version = "0.1.0"
edition = "2021"
description = "Design system linting: JSX/Vue component inventory, usage analytics, and governance signals"
repository = "https://github.com/jrmybtlr/DSLinter"
license = "Apache-2.0"
autobins = false

# `dslinter` is the supported CLI name (npm + releases). Do not `cargo install dslint` on
# crates.io — that is an unrelated package.
[[bin]]
name = "dslinter"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "=4.5.23", features = ["derive"] }
globset = "=0.4.14"
oxc_allocator = "0.52.0"
oxc_ast = "0.52.0"
oxc_parser = "0.52.0"
oxc_span = "0.52.0"
oxc_syntax = "0.52.0"
rayon = "1.12.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
walkdir = "2.5.0"
