[package]
name = "dslinter"
version = "0.1.0"
edition = "2021"
description = "Design system linting: JSX/Vue component inventory, usage analytics, and governance signals"
repository = "https://github.com/jrmybtlr/DSLinter"
license = "Apache-2.0"
autobins = false

# `dslinter` is the supported CLI name (npm + releases). Do not `cargo install dslint` on
# crates.io — that is an unrelated package.
[[bin]]
name = "dslinter"
path = "src/main.rs"
required-features = ["cli-bin"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["cli-bin"]
cli-bin = []
napi = ["dep:napi", "dep:napi-derive"]

[build-dependencies]
napi-build = "2.3"

[dependencies]
napi = { version = "3", default-features = false, features = ["napi8"], optional = true }
napi-derive = { version = "3", optional = true }
anyhow = "1.0.102"
clap = { version = "=4.5.23", features = ["derive"] }
globset = "=0.4.14"
oxc_allocator = "0.52.0"
oxc_ast = "0.52.0"
oxc_parser = "0.52.0"
oxc_span = "0.52.0"
oxc_syntax = "0.52.0"
rayon = "1.12.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
time = { version = "0.3", default-features = false, features = ["formatting"] }
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.25.0"
